# hangman

./: .gitignore  CMakeLists.txt  Hangman  LICENSE  README.md  a.out  config.h  dictionary.c  dictionary.h  hangman  main.c  rng.c  rng.h  rules.ninja  utils.c  utils.h
